--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "next": "15.0.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@clerk/nextjs": "^6.9.3",
+    "@sentry/nextjs": "^8.32.0",
+    "posthog-js": "^1.183.0",
+    "stripe": "^16.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
