--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,9 @@
     "stripe": "^16.3.0"
   },
   "devDependencies": {
+    "@types/node": "^20.16.11",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
