--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "test": "echo 'no-tests-yet'"
   },
   "dependencies": {
-    "next": "15.0.0",
+    "next": "^15.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "@clerk/nextjs": "^6.9.3",
@@ -20,6 +20,7 @@
     "stripe": "^16.3.0"
   },
   "devDependencies": {
+  "@rrweb/types": "2.0.0-alpha.18",
     "@types/node": "^20.16.11",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
