--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,22 +2,37 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "types": [
-      "node",
-      "react",
-      "react-dom"
+      "node"
     ],
-    "jsx": "react-jsx",
+    "jsx": "preserve",
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
