--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "stripe:webhook": "tsx scripts/stripe-webhook-setup.ts",
+    "stripe:webhook:api": "tsx scripts/stripe-webhook-setup.ts --endpoint-webhook-id",
+    "stripe:webhook:create": "tsx scripts/stripe-create-webhook.ts"
   },
   "devDependencies": {
     "turbo": "^2.0.3",
     "typescript": "^5.6.3",
     "eslint": "^9.11.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "tsx": "^4.19.1"
   }
 }
